# metripy

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  metripy.dist.json  metripy.dist.yaml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: test.yml
docs/: _config.yml  configuration.md  features.md  getting-started.md  index.md  installation.md
metripy/: metripy.py
metripy/Application/: Analyzer.py  Application.py  FailureEvaluator.py  Info.py
metripy/Application/Config/: CodeSmellConfig.py  Config.py  FailureConfig.py  GitConfig.py  Parser.py  ProjectConfig.py  ReportConfig.py
metripy/Component/Debug/: Debugger.py
metripy/Component/File/: Finder.py
metripy/Component/Output/: CliOutput.py  ProgressBar.py
metripy/DebugUtils/: AstDumper.py
metripy/Dependency/: Dependency.py
metripy/Dependency/Composer/: Composer.py  Packegist.py
metripy/Dependency/Npm/: Npm.py  NpmOrg.py
metripy/Dependency/Pip/: Pip.py  PyPi.py
metripy/Git/: GitAnalyzer.py
metripy/Import/Json/: JsonImporter.py
metripy/LangAnalyzer/: AbstractLangAnalyzer.py
metripy/LangAnalyzer/Generic/: HalSteadAnalyzer.py
metripy/LangAnalyzer/Php/: PhpAnalyzer.py  PhpBasicAstParser.py  PhpBasicLocAnalyzer.py  PhpHalSteadAnalyzer.py  PhpImportsAnalyzer.py
metripy/LangAnalyzer/Python/: PythonAnalyzer.py  PythonHalSteadAnalyzer.py  PythonImportsAnalyzer.py
metripy/LangAnalyzer/Typescript/: TypescriptAnalyzer.py  TypescriptAstParser.py  TypescriptBasicComplexityAnalyzer.py  TypescriptBasicLocAnalyzer.py  TypescriptHalSteadAnalyzer.py  TypescriptImportsAnalyzer.py  TypescriptNamingConventionDetector.py
metripy/Metric/: ProjectMetrics.py
metripy/Metric/Code/: AggregatedMetrics.py  FileMetrics.py  ModuleMetrics.py  SegmentedMetrics.py  Segmentor.py
metripy/Metric/FileTree/: FileTree.py  FileTreeParser.py
metripy/Metric/Git/: GitCodeHotspot.py  GitContributor.py  GitKnowledgeSilo.py  GitMetrics.py
metripy/Metric/Trend/: AggregatedTrendMetric.py  ClassTrendMetric.py  FileTrendMetric.py  FunctionTrendMetric.py  SegmentedTrendMetric.py
metripy/Report/: ReporterFactory.py  ReporterInterface.py
metripy/Report/Cli/: AbstractFormatter.py  Reporter.py  (+6 more)
metripy/Tree/: ClassNode.py  FunctionNode.py  ModuleNode.py
metripy/Trend/: TrendAnalyzer.py
templates/html_report/: dependencies.html  files.html  git_analysis.html  index.html  top_offenders.html  trends.html
tests/Application/: test_analyzer.py  test_application.py
(+127 files in other folders)
